--- a/src/css/VideoResult.css
+++ b/src/css/VideoResult.css
@@ -1,11 +1,11 @@
-.VideoResult-test {
+.ImageResult-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   transition-duration: 3s;
 }
 
 img {
   width: 90%;
-  height: 90%;
 }
