--- a/src/css/Results.css
+++ b/src/css/Results.css
@@ -1,7 +1,7 @@
 .results {
   width: 90vw;
   margin: 0 auto;
-  background: #1E2C52;
+  /*background: #1E2C52;*/
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
