--- a/src/css/ImageResult.css
+++ b/src/css/ImageResult.css
@@ -8,9 +8,16 @@
 }
 
 .ImageResult-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   height: 100%;
   width: 90%;
-  box-shadow: 0 1px 3px 1px gray;
+  border-bottom: 1px solid gray;
+}
+
+img {
+  width: 100%;
 }
 
 .ImageResult-img-details {
@@ -18,6 +25,7 @@
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: white;
 }
 
@@ -25,8 +33,4 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-}
-
-img {
-  width: 100%;
 }
