Add header to video list and tinker with responsiveness

--- a/src/css/Results.css
+++ b/src/css/Results.css
@@ -1,8 +1,13 @@
 .results {
-  width: 90vw;
+  width: 90%;
   margin: 0 auto;
   /*background: #1E2C52;*/
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.Results-heading {
+  width: 80%;
+  margin: 0 auto;
 }
