--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,45 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Caveat+Brush');
+
 .Header-container {
-  height: 30vh;
+  height: 10vh;
   width: 100%;
-  background: url('http://www.freeiconspng.com/uploads/mountain-png-23.png');
-  background-size: contain;
-  background-repeat: repeat-x;
-  background-position: bottom;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Header-container h1 {
-  position: absolute;
-  top: 10%;
-  left: 30%;
+  font-family: "Caveat Brush";
 }
-
-@media (max-width: 1100px) {
-  .Header-container h1 {
-    left: 20%;
-  }
-}
-
-@media (max-width: 1000px) {
-  .Header-container h1 {
-    left: 10%;
-  }
-}
-
-@media (max-width: 800px) {
-  .Header-container {
-    height: 20vh;
-  }
-
-  .Header-container h1 {
-    font-size: 1.5rem;
-  }
-}
-
-/*.Header-title {
-  height: 30%;
-}
-
-.Header-background {
-  height: 70%;
-}*/
